objects/ssot__PaymentRequestLine__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdjustmentAmount__c</fullName>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AdjustmentReasonText__c</fullName>
        <label>Adjustment Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitName__c</fullName>
        <label>Benefit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimItem__c</fullName>
        <label>Claim Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosticCodeId__c</fullName>
        <label>Diagnostic Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosticCodeObject__c</fullName>
        <label>Diagnostic Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FacilityId__c</fullName>
        <label>Facility</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FacilityObject__c</fullName>
        <label>Facility Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Payment Request Line Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentRequestId__c</fullName>
        <label>Payment Request</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentRequestLineServiceType__c</fullName>
        <label>Payment Request Line Service Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentRequestLineStatus__c</fullName>
        <label>Payment Request Line Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityUnitOfMeasureId__c</fullName>
        <label>Quantity Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedAmount__c</fullName>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceAmount__c</fullName>
        <label>Service Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceCodeId__c</fullName>
        <label>Service Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceCodeObject__c</fullName>
        <label>Service Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceProviderId__c</fullName>
        <label>Service Provider</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceProviderObject__c</fullName>
        <label>Service Provider Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__UnitPriceAmount__c</fullName>
        <label>Unit Price Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658744520_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentRequestLine_FacilityId_map_He_rel</label>
        <referenceTo>ssot__HealthcareFacility__dlm</referenceTo>
        <relationshipLabel>PaymentRequestLine_FacilityId_map_He_rel</relationshipLabel>
        <relationshipName>rel_1731658744520_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658746503_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentRequestLine_DiagnosticCodeId__rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>PaymentRequestLine_DiagnosticCodeId__rel</relationshipLabel>
        <relationshipName>rel_1731658746503_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658748649_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentRequestLine_DiagnosticCodeId__rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>PaymentRequestLine_DiagnosticCodeId__rel</relationshipLabel>
        <relationshipName>rel_1731658748649_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>